2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress some debug logging

2004-01-15  Geert Stappers <stappers@stappers.nl>

	* plugin-templates.c

	Fixed C99ism build problem on gcc-2.95.4

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress a warning due to clashing PRIVATE macros
	
2004-01-14  Jeff Martin <jeff@custommonkey.org>

	* plugin-templates.c

	Change template code to use a <cong:template> element

2004-01-13  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* plugin-templates.c

	Free a GSList actual with a g_slist_free()

2004-01-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-command.c, cong-command.h, cong-edit-find-and-replace.c, cong-editor-node.c, cong-editor-node.h, cong-fake-plugin-hooks.h, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-print.c, cong-menus.c, cong-modification.c, cong-node-properties-dialog.c, cong-plugin.c, cong-plugin.h, global.h, popup.c

	Big reorganisation of plugin code: plugins and services are now GObjects rather than dumb structs; they now have individual files per class rather than a monolithic cong-plugin.[ch]; services no longer know which plugin they belong to (affecting GConf paths accordingly)

	* Makefile.am, cong-object.h, cong-plugin-manager.c, cong-plugin-manager.h, cong-service-doc-tool.c, cong-service-doc-tool.h, cong-service-document-factory.c, cong-service-document-factory.h, cong-service-editor-node-factory.c, cong-service-editor-node-factory.h, cong-service-exporter.c, cong-service-exporter.h, cong-service-importer.c, cong-service-importer.h, cong-service-node-property-dialog.c, cong-service-node-property-dialog.h, cong-service-node-tool.c, cong-service-node-tool.h, cong-service-print-method.c, cong-service-print-method.h, cong-service-tool.c, cong-service-tool.h, cong-service.c, cong-service.h

	Lots of new files due to splitting cong-plugin.[hc] into a separate [hc] file per class.
