@@ -1,3 +1,9 @@
+2004-01-16  Dave Malcolm  <david@davemalcolm.demon.co.uk>
+
+	* cong-editor-widget3.c
+
+	Removed dead code
+
 2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-app.c
